Added quick check workflows
Added quick check workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,16 @@
 name: Build and Deploy
 
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - master
+      - staging
+      - cicd-*
+  pull_request:
+    branches:
+      - master
+      - staging
+      - cicd-*
 
 env:
   AWS_DEFAULT_REGION: ap-southeast-1
