--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Build and Deploy
 
-on: push
+on: 
+  push:
+    branches:
+      - master
+      - staging
+      - cicd-*
 
 env:
   AWS_DEFAULT_REGION: ap-southeast-1
